--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "blog-server",
   "version": "0.0.0",
   "private": true,
-  "engines": {"node": "16.13.2"},
+  "engines": {
+    "node": "16.13.2"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
@@ -13,6 +15,7 @@
     "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "express": "~4.16.1",
